docs: add godocs comments to all routes
* disable serving docs by default
